# Sphero_Robot

./: CMakeLists.txt  README.md  vcpkg.json
PC-Code/: CMakeLists.txt  color_tracker.cpp  main.cpp
PC-Code/Includes/Controllers/: MotorController.hpp
PC-Code/Includes/Sensors/: SensorReader.hpp
PC-Code/gui/: index.html  script.js  style.css
PC-Code/include/comms/: communicationhandler.hpp
PC-Code/include/comms/client/: clients.hpp  tcp_client.hpp
PC-Code/include/comms/server/: socket_handler.hpp  tcp_server.hpp
PC-Code/include/communications/: client.hpp  mock_server.hpp  network_helper.hpp  network_socket.hpp  server.hpp  thread_safe_queue.hpp  websocket.hpp
PC-Code/include/control/: motorcontroller.hpp
PC-Code/include/controllers/: motorcontroller.hpp
PC-Code/include/sensors/: color_tracker.hpp  colortracker.hpp  sensor_processing.hpp  sensordata.hpp
PC-Code/src/: CMakeLists.txt
PC-Code/src/Sensors/: SensorReader.cpp
PC-Code/src/comms/: CMakeLists.txt  tcp_client.cpp
PC-Code/src/comms/client/: tcp_client.cpp
PC-Code/src/communications/: CMakeLists.txt  client.cpp  html5.cpp  tcp_client.cpp
PC-Code/src/control/: CMakeLists.txt  motorcontroller.cpp
PC-Code/src/controllers/: CMakeLists.txt  motorcontroller.cpp
PC-Code/src/sensors/: CMakeLists.txt  color_tracker.cpp  sensor_processing.cpp  sensorreader.cpp
PC-Code/tests/: CMakeLists.txt  JSON_tester.cpp  client_tester.cpp  colortracking_tests.cpp  motorcontroller_tests.cpp  test_client.cpp  test_communicationhandler.cpp  test_tcp_client.cpp
RPi-Code/: server.py  udp_stream.py
test-files/: testimplementation.cpp
